<resources>
    <string name="app_name">BBIT3BPROJECT</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_signup">signup</string>


    <string name="txtfirstname_hint">FirstName</string>
    <string name="txtlastname_hint">LastName</string>
    <string name="txtemail_hint">Email</string>
    <string name="txtphonenumber_hint">PhoneNumber</string>
    <string name="txtpassword_hint">Password</string>
</resources>
